微信二维码验证回调；微信手机号绑定